--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
   background-color: #fbfbfb;
+  height: 100%;
+  width: 100%;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -10,12 +12,15 @@
   -webkit-text-size-adjust: 100%;
 }
 
+#root {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  height: 100%;
+  width: 100%;
 }
 
 h1 {
