--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -1,3 +1,10 @@
-
+#home-page {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
 
 /*# sourceMappingURL=pages.css.map */
