--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -3,9 +3,13 @@ body.light {
   --navbar-items-color: rgb(255, 255, 255);
 }
 
+body.dark {
+  --navbar-items-color: rgb(0, 0, 0);
+}
+
 #navbar-component {
   width: 100%;
-  height: 75px;
+  height: 85px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -16,8 +20,7 @@ body.light {
   color: var(--navbar-items-color);
 }
 #navbar-component img {
-  height: 32px;
-  width: 10%;
+  width: 8%;
 }
 #navbar-component #nav-items {
   display: flex;
@@ -45,13 +48,27 @@ body.light {
   justify-content: flex-start;
   align-items: center;
   gap: 26px;
-  margin-right: 52px;
+  margin-right: 18px;
+}
+#navbar-component #nav-items #nav-items-right .notifs-dropdown {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#navbar-component #nav-items #nav-items-right .notifs-dropdown *:not(.ant-scroll-number) {
+  height: 28px;
+}
+#navbar-component #nav-items #nav-items-right .notifs-dropdown img {
+  width: 20px;
+  cursor: pointer;
 }
 #navbar-component #nav-items #nav-items-right p {
   cursor: pointer;
 }
 #navbar-component #nav-items #nav-items-right .ant-btn {
   height: 45px;
+  width: 105px;
   font-size: 18px;
   display: flex;
   flex-direction: row;
@@ -62,6 +79,46 @@ body.light {
 }
 #navbar-component #nav-items #nav-items-right .ant-btn p {
   margin: 0%;
+}
+
+.logo-light,
+.notifs-light {
+  filter: brightness(0) invert(1);
+  -webkit-filter: brightness(0) invert(1);
+}
+
+.logo-dark,
+.notifs-dark {
+  filter: brightness(0);
+  -webkit-filter: brightness(0);
+}
+
+.hover-underline-animation {
+  display: inline-block;
+  position: relative;
+}
+
+.hover-underline-animation::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--navbar-items-color);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.hover-underline-animation:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.underlined-item {
+  text-decoration: underline;
+  text-underline-offset: 5px;
 }
 
 /*# sourceMappingURL=components.css.map */
