--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -2,7 +2,7 @@
 
 #navbar-component {
     width: 100%;
-    height: 75px;
+    height: 85px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -12,8 +12,7 @@
     background-color: var(--navbar-color);
     color: var(--navbar-items-color);
     img {
-        height: 32px;
-        width: 10%;
+        width: 8%;
     }
     #nav-items {
         display: flex;
@@ -39,12 +38,26 @@
             justify-content: flex-start;
             align-items: center;
             gap: 26px;
-            margin-right: 52px;
+            margin-right: 18px;
+            .notifs-dropdown {
+                *:not(.ant-scroll-number) {
+                    height: 28px;
+                }
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                img {
+                    width: 20px;
+                    cursor: pointer;
+                }
+            }
             p {
                 cursor: pointer;
             }
             .ant-btn {
                 height: 45px;
+                width: 105px;
                 font-size: 18px;
                 display: flex;
                 flex-direction: row;
@@ -59,4 +72,43 @@
         }
         font-size: 18px;
     }
+}
+
+.logo-light,
+.notifs-light {
+    filter: brightness(0) invert(1);
+    -webkit-filter: brightness(0) invert(1);
+}
+.logo-dark,
+.notifs-dark {
+    filter: brightness(0);
+    -webkit-filter: brightness(0);
+}
+
+.hover-underline-animation {
+    display: inline-block;
+    position: relative;
+}
+
+.hover-underline-animation::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--navbar-items-color);
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.hover-underline-animation:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
+.underlined-item {
+    text-decoration: underline;
+    text-underline-offset: 5px;
 }
