--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,6 +1,12 @@
 body.light {
   --navbar-color: rgb(86, 86, 255);
   --navbar-items-color: rgb(255, 255, 255);
+  --profile-right-bg: #efefef;
+  --profile-picture-add: #dfdfdf;
+  --field-label: #b6b6b6;
+  --field-content: rgba(0, 0, 0, 0.8);
+  --profile-picture: #d9d9d9;
+  --profile-picture-bottom: #c9c9c9;
 }
 
 body.dark {
@@ -119,6 +125,79 @@ body.dark {
 .underlined-item {
   text-decoration: underline;
   text-underline-offset: 5px;
+}
+
+.field-component {
+  font-size: 16px;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 5px;
+}
+.field-component p {
+  margin: 0;
+}
+.field-component .field-label {
+  color: var(--field-label);
+}
+.field-component .field-content {
+  color: var(--field-content);
+}
+
+#profile-picture-component {
+  width: 260px;
+  height: 240px;
+  background-color: var(--profile-picture);
+  box-sizing: border-box;
+  position: relative;
+  cursor: pointer;
+}
+#profile-picture-component img#camera {
+  margin: 12px 0px 0px 12px;
+  opacity: 80%;
+}
+#profile-picture-component .anticon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+#profile-picture-component .anticon svg {
+  width: 160px !important;
+  height: 160px !important;
+  opacity: 80%;
+}
+#profile-picture-component #pp-bottom {
+  width: 152px;
+  height: 30px;
+  background-color: var(--profile-picture-bottom);
+  border-radius: 50px 50px 0 0;
+  -webkit-border-radius: 50px 50px 0 0;
+  -moz-border-radius: 50px 50px 0 0;
+  -ms-border-radius: 50px 50px 0 0;
+  -o-border-radius: 50px 50px 0 0;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+  -moz-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  -o-transform: translate(-50%);
+  text-align: center;
+}
+#profile-picture-component #pp-bottom p {
+  height: 100%;
+  margin: 0%;
+  line-height: 30px;
+  font-weight: 800;
+  opacity: 80%;
 }
 
 /*# sourceMappingURL=components.css.map */
