--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -1,5 +1,9 @@
 @import 'variables';
 
+// ---------------------------------------
+// NavBar
+// ---------------------------------------
+
 #navbar-component {
     width: 100%;
     height: 85px;
@@ -111,4 +115,85 @@
 .underlined-item {
     text-decoration: underline;
     text-underline-offset: 5px;
+}
+
+// ---------------------------------------
+// Field
+// ---------------------------------------
+
+.field-component {
+    font-size: 16px;
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 5px;
+    p {
+        margin: 0;
+    }
+    .field-label {
+        color: var(--field-label);
+    }
+    .field-content {
+        color: var(--field-content);
+    }
+}
+
+// ---------------------------------------
+// Profile Picture
+// ---------------------------------------
+
+#profile-picture-component {
+    width: 260px;
+    height: 240px;
+    background-color: var(--profile-picture);
+    box-sizing: border-box;
+    position: relative;
+    cursor: pointer;
+    img#camera {
+        margin: 12px 0px 0px 12px;
+        opacity: 80%;
+    }
+    .anticon {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        svg {
+            width: 160px !important;
+            height: 160px !important;
+            opacity: 80%;
+        }
+    }
+    #pp-bottom {
+        width: 152px;
+        height: 30px;
+        background-color: var(--profile-picture-bottom);
+        border-radius: 50px 50px 0 0;
+        -webkit-border-radius: 50px 50px 0 0;
+        -moz-border-radius: 50px 50px 0 0;
+        -ms-border-radius: 50px 50px 0 0;
+        -o-border-radius: 50px 50px 0 0;
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transform: translate(-50%);
+        -webkit-transform: translate(-50%);
+        -moz-transform: translate(-50%);
+        -ms-transform: translate(-50%);
+        -o-transform: translate(-50%);
+        text-align: center;
+        p {
+            height: 100%;
+            margin: 0%;
+            line-height: 30px;
+            font-weight: 800;
+            opacity: 80%;
+        }
+    }
 }
