--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -10,14 +10,44 @@
 }
 
 #profile-page #profile-page-content {
+  box-sizing: border-box;
+  padding: 12px 12px 12px 0px;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
 }
-#profile-page #profile-page-content .ant-select {
-  width: 200px !important;
+#profile-page #profile-page-content #profile-page-content-left {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
-#profile-page #profile-page-content .ant-select-selection-item {
+#profile-page #profile-page-content #profile-page-content-left .ant-select {
+  width: 80% !important;
+}
+#profile-page #profile-page-content #profile-page-content-left .ant-select-selection-item {
   display: none !important;
+}
+#profile-page #profile-page-content #profile-page-content-right {
+  box-sizing: border-box;
+  padding: 26px;
+  width: 80%;
+  height: 100%;
+  border-radius: 26px;
+  -webkit-border-radius: 26px;
+  -moz-border-radius: 26px;
+  -ms-border-radius: 26px;
+  -o-border-radius: 26px;
+  background-color: var(--profile-right-bg);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 /*# sourceMappingURL=pages.css.map */
