--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,12 @@
 body.light {
     --navbar-color: rgb(86, 86, 255);
     --navbar-items-color: rgb(255, 255, 255);
+    --profile-right-bg: #efefef;
+    --profile-picture-add: #dfdfdf;
+    --field-label: #b6b6b6;
+    --field-content: rgba(0, 0, 0, 0.8);
+    --profile-picture: #d9d9d9;
+    --profile-picture-bottom: #c9c9c9;
 }
 
 body.dark {
