--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,6 +11,8 @@ body.light {
     --button-text: rgba(255, 255, 255, 0.95);
     --button-hover: darkblue;
     --button-active: royalblue;
+    --button-hover-sec: #5a6268;
+    --button-active-sec: #4e555b;
 }
 
 body.dark {
