--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -19,6 +19,7 @@
     .logo-dark {
         width: 8%;
         min-width: 120px;
+        cursor: pointer;
     }
     p {
         margin: 0%;
@@ -164,7 +165,7 @@
     cursor: pointer;
     img#camera {
         margin: 12px 0px 0px 12px;
-        opacity: 80%;
+        opacity: 0.7;
     }
     .anticon {
         position: absolute;
