--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -1,7 +1,8 @@
 #home-page,
 #profile-page,
 #attendance-page {
-    height: 100%;
+    height: fit-content;
+    min-height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -50,19 +51,30 @@
             -ms-border-radius: 26px;
             -o-border-radius: 26px;
             background-color: var(--profile-right-bg);
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
+            margin: auto;
+            .form-btns {
+                .anticon {
+                    margin-right: 8px;
+                    width: 16px;
+                }
+            }
+            .edit-icon {
+                cursor: pointer;
+            }
             .ppcr-title {
                 font-weight: 700;
                 color: var(--ppcr-title);
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                width: 97%;
             }
             hr {
                 width: 95%;
             }
             .custom-row {
-                height: 75px;
+                height: 90px !important;
             }
             #username {
                 font-weight: 700;
@@ -80,10 +92,20 @@
                 -ms-transition: background-color 0.3s ease;
                 -o-transition: background-color 0.3s ease;
                 &:hover {
-                    background-color: darkblue !important;
+                    background-color: var(--button-hover) !important;
                 }
                 &:active {
-                    background-color: royalblue !important;
+                    background-color: var(--button-active) !important;
+                    box-shadow: none !important;
+                    outline: none !important;
+                }
+            }
+            .btn-outline-secondary {
+                &:hover {
+                    background-color: var(--button-hover-sec) !important;
+                }
+                &:active {
+                    background-color: var(--button-active-sec) !important;
                     box-shadow: none !important;
                     outline: none !important;
                 }
