--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -35,7 +35,7 @@
                 width: 85% !important;
             }
             .ant-select-selection-item {
-                display: none !important;
+                max-height: 30px !important;
             }
         }
         #profile-page-content-right {
