Removed field component and added it directly to code to prevent rendering issues

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -161,6 +161,9 @@ body.dark {
 .field-component .field-content {
   color: var(--field-content);
 }
+.field-component .ant-select {
+  min-width: 100%;
+}
 
 #profile-picture-component {
   width: 260px;
