--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 body.light {
     --navbar-color: rgb(86, 86, 255);
     --navbar-items-color: rgba(255, 255, 255, 0.95);
-    --profile-right-bg: #efefef;
+    --page-item-bg: #efefef;
     --profile-picture-add: #dfdfdf;
     --field-label: #b6b6b6;
     --field-content: rgba(0, 0, 0, 0.8);
@@ -13,6 +13,8 @@ body.light {
     --button-active: royalblue;
     --button-hover-sec: #5a6268;
     --button-active-sec: #4e555b;
+    --error-msg: #dc3545;
+    --footer-bg-color: #efefef;
 }
 
 body.dark {
