--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -4,7 +4,8 @@
 #profile-page,
 #attendance-page,
 #register-page,
-#login-page {
+#login-page,
+#notfound-page {
     height: fit-content;
     min-height: 100%;
     width: 100%;
