--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,6 +15,7 @@ body.light {
     --button-active-sec: #4e555b;
     --error-msg: #dc3545;
     --footer-bg-color: #efefef;
+    --table-border-color: #f0f0f0;
 }
 
 body.dark {
