--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -50,11 +50,11 @@
             width: 80%;
             height: 100%;
             min-height: fit-content;
-            border-radius: 26px;
-            -webkit-border-radius: 26px;
-            -moz-border-radius: 26px;
-            -ms-border-radius: 26px;
-            -o-border-radius: 26px;
+            border-radius: 12px;
+            -webkit-border-radius: 12px;
+            -moz-border-radius: 12px;
+            -ms-border-radius: 12px;
+            -o-border-radius: 12px;
             background-color: var(--page-item-bg);
             margin: auto;
             .form-btns {
@@ -161,5 +161,49 @@
     }
     .ant-btn {
         width: 100%;
+    }
+}
+
+// ---------------------------------------
+// Attendance Page
+// ---------------------------------------
+
+#attendance-content {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    #attendance-filters {
+        padding-top: 26px;
+        width: 20%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        .ant-select,
+        .ant-picker {
+            width: 85% !important;
+            margin-bottom: 26px;
+        }
+        .ant-select-selection-item {
+            max-height: 30px !important;
+        }
+    }
+    #attendance-container {
+        box-sizing: border-box;
+        width: 80%;
+        margin: auto;
+        margin-right: 0px;
+        .ant-table {
+            border-left: 1px solid var(--table-border-color);
+            border-right: 1px solid var(--table-border-color);
+        }
+        .ant-pagination {
+            margin-right: 36px;
+        }
     }
 }
