--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -174,20 +174,20 @@ body.dark {
 
 #attendance-content {
   width: 100%;
-  height: 100%;
+  height: 75vh;
+  max-height: 75vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
 }
 #attendance-content #attendance-filters {
-  padding-top: 26px;
   width: 20%;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 #attendance-content #attendance-filters .ant-select,
 #attendance-content #attendance-filters .ant-picker {
@@ -198,6 +198,7 @@ body.dark {
   max-height: 30px !important;
 }
 #attendance-content #attendance-container {
+  height: 100%;
   box-sizing: border-box;
   width: 80%;
   margin: auto;
@@ -209,6 +210,14 @@ body.dark {
 }
 #attendance-content #attendance-container .ant-pagination {
   margin-right: 36px;
+}
+#attendance-content #inputs {
+  height: 20%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 /*# sourceMappingURL=pages.css.map */
