--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -170,20 +170,21 @@
 
 #attendance-content {
     width: 100%;
-    height: 100%;
 
+    height: 75vh;
+    max-height: 75vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
     #attendance-filters {
-        padding-top: 26px;
+        // check max height for table
         width: 20%;
         height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: space-between;
         .ant-select,
         .ant-picker {
             width: 85% !important;
@@ -194,6 +195,7 @@
         }
     }
     #attendance-container {
+        height: 100%;
         box-sizing: border-box;
         width: 80%;
         margin: auto;
@@ -205,5 +207,13 @@
         .ant-pagination {
             margin-right: 36px;
         }
+    }
+    #inputs {
+        height: 20%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
     }
 }
