--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -6,7 +6,7 @@ body.light {
   --field-label: #b6b6b6;
   --field-content: rgba(0, 0, 0, 0.8);
   --profile-picture: #d9d9d9;
-  --profile-picture-bottom: #c9c9c9;
+  --profile-picture-bottom: rgba(255, 255, 255, 0.7);
   --ppcr-title: #a5a5a5;
   --button-text: rgba(255, 255, 255, 0.95);
   --button-hover: darkblue;
@@ -170,7 +170,7 @@ body.dark {
 
 #profile-picture-component {
   width: 260px;
-  height: 240px;
+  height: 194.89px;
   background-color: var(--profile-picture);
   box-sizing: border-box;
   position: relative;
@@ -180,20 +180,8 @@ body.dark {
   margin: 12px 0px 0px 12px;
   opacity: 0.7;
 }
-#profile-picture-component .anticon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-}
-#profile-picture-component .anticon svg {
-  width: 160px !important;
-  height: 160px !important;
-  opacity: 80%;
+#profile-picture-component #user-picture {
+  width: 100%;
 }
 #profile-picture-component #pp-bottom {
   width: 152px;
@@ -219,7 +207,39 @@ body.dark {
   margin: 0%;
   line-height: 30px;
   font-weight: 800;
-  opacity: 80%;
+}
+#profile-picture-component::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  -webkit-transition: opacity 0.3s ease;
+  -moz-transition: opacity 0.3s ease;
+  -ms-transition: opacity 0.3s ease;
+  -o-transition: opacity 0.3s ease;
+}
+#profile-picture-component:hover::before {
+  opacity: 1;
+}
+#profile-picture-component #edit-profile-pic {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+#profile-picture-component #edit-profile-pic svg {
+  color: white;
+  width: 30px !important;
+  height: 30px !important;
 }
 
 .footer {
