--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -161,7 +161,7 @@
 
 #profile-picture-component {
     width: 260px;
-    height: 240px;
+    height: 194.89px;
     background-color: var(--profile-picture);
     box-sizing: border-box;
     position: relative;
@@ -170,20 +170,8 @@
         margin: 12px 0px 0px 12px;
         opacity: 0.7;
     }
-    .anticon {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        -webkit-transform: translate(-50%, -50%);
-        -moz-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        -o-transform: translate(-50%, -50%);
-        svg {
-            width: 160px !important;
-            height: 160px !important;
-            opacity: 80%;
-        }
+    #user-picture {
+        width: 100%;
     }
     #pp-bottom {
         width: 152px;
@@ -208,7 +196,39 @@
             margin: 0%;
             line-height: 30px;
             font-weight: 800;
-            opacity: 80%;
+        }
+    }
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.3);
+        opacity: 0;
+        transition: opacity 0.3s ease;
+        -webkit-transition: opacity 0.3s ease;
+        -moz-transition: opacity 0.3s ease;
+        -ms-transition: opacity 0.3s ease;
+        -o-transition: opacity 0.3s ease;
+    }
+    &:hover::before {
+        opacity: 1;
+    }
+    #edit-profile-pic {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+        svg {
+            color: white;
+            width: 30px !important;
+            height: 30px !important;
         }
     }
 }
