--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -6,7 +6,7 @@ body.light {
   --field-label: #b6b6b6;
   --field-content: rgba(0, 0, 0, 0.8);
   --profile-picture: #d9d9d9;
-  --profile-picture-bottom: #c9c9c9;
+  --profile-picture-bottom: rgba(255, 255, 255, 0.7);
   --ppcr-title: #a5a5a5;
   --button-text: rgba(255, 255, 255, 0.95);
   --button-hover: darkblue;
@@ -170,6 +170,40 @@ body.dark {
 }
 #register-form-container .ant-btn {
   width: 100%;
+}
+
+#webcam-container {
+  padding: 16px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 26px;
+}
+#webcam-container video {
+  border: 2px solid #000;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+}
+
+.webcam-buttons {
+  width: 550px;
+  height: fit-content;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 26px;
+}
+.webcam-buttons button {
+  font-size: 15px !important;
+  width: 150px !important;
 }
 
 #attendance-content {
