--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -164,6 +164,39 @@
     }
 }
 
+#webcam-container {
+    padding: 16px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 26px;
+    video {
+        border: 2px solid #000;
+        border-radius: 16px;
+        -webkit-border-radius: 16px;
+        -moz-border-radius: 16px;
+        -ms-border-radius: 16px;
+        -o-border-radius: 16px;
+    }
+}
+.webcam-buttons {
+    width: 550px;
+    height: fit-content;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 26px;
+    button {
+        font-size: 15px !important;
+        width: 150px !important;
+    }
+}
+
 // ---------------------------------------
 // Attendance Page
 // ---------------------------------------
