--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,7 +6,7 @@ body.light {
     --field-label: #b6b6b6;
     --field-content: rgba(0, 0, 0, 0.8);
     --profile-picture: #d9d9d9;
-    --profile-picture-bottom: #c9c9c9;
+    --profile-picture-bottom: rgba(255, 255, 255, 0.7);
     --ppcr-title: #a5a5a5;
     --button-text: rgba(255, 255, 255, 0.95);
     --button-hover: darkblue;
