--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -44,7 +44,6 @@
             }
         }
         #profile-page-content-right {
-            margin-right: 8px;
             box-sizing: border-box;
             padding: 26px;
             width: 80%;
@@ -57,6 +56,7 @@
             -o-border-radius: 12px;
             background-color: var(--page-item-bg);
             margin: auto;
+            margin-left: 10px;
             .form-btns {
                 .anticon {
                     margin-right: 8px;
@@ -203,7 +203,6 @@
 
 #attendance-content {
     width: 100%;
-
     height: 75vh;
     max-height: 75vh;
     display: flex;
