--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -170,8 +170,13 @@ body.dark {
 
 #profile-picture-component {
   width: 260px;
-  height: 194.89px;
+  height: 260px;
   background-color: var(--profile-picture);
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
   box-sizing: border-box;
   position: relative;
   cursor: pointer;
@@ -182,6 +187,12 @@ body.dark {
 }
 #profile-picture-component #user-picture {
   width: 100%;
+  border: 2px solid #000;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
 }
 #profile-picture-component #pp-bottom {
   width: 152px;
@@ -194,7 +205,7 @@ body.dark {
   -o-border-radius: 50px 50px 0 0;
   position: absolute;
   left: 50%;
-  bottom: 0;
+  bottom: 2px;
   transform: translate(-50%);
   -webkit-transform: translate(-50%);
   -moz-transform: translate(-50%);
@@ -222,6 +233,11 @@ body.dark {
   -moz-transition: opacity 0.3s ease;
   -ms-transition: opacity 0.3s ease;
   -o-transition: opacity 0.3s ease;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
 }
 #profile-picture-component:hover::before {
   opacity: 1;
@@ -266,6 +282,61 @@ body.dark {
 }
 .footer .footer-right a:hover {
   color: var(--button-hover);
+}
+
+#webcam-container {
+  box-sizing: border-box;
+  padding: 16px;
+  height: 480px;
+  width: 480px;
+  margin: 26px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 26px;
+  aspect-ratio: 1/1;
+}
+#webcam-container video {
+  width: 480px !important;
+  height: 480px !important;
+  border: 2px solid #000;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+  aspect-ratio: 1/1;
+}
+#webcam-container img {
+  box-sizing: border-box;
+  border: 2px solid #000;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+}
+
+.webcam-buttons {
+  width: 480px;
+  height: fit-content;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 26px;
+}
+.webcam-buttons button {
+  font-size: 15px !important;
+  width: 150px !important;
+}
+
+.webcam-video {
+  width: 480px !important;
+  height: 480px !important;
+  object-fit: cover;
 }
 
 /*# sourceMappingURL=components.css.map */
