--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -16,6 +16,42 @@
 }
 
 // ---------------------------------------
+// Login
+// ---------------------------------------
+
+#login-form-container {
+    h3 {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 26px;
+        color: var(--field-content);
+    }
+    width: 550px;
+    background-color: var(--page-item-bg);
+    padding: 26px;
+    margin: 26px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    .ant-row {
+        width: 100% !important;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+    label {
+        margin-right: 100%;
+    }
+    .ant-btn {
+        width: 100%;
+    }
+}
+
+// ---------------------------------------
 // Profile
 // ---------------------------------------
 
@@ -129,6 +165,22 @@
 // Register Page
 // ---------------------------------------
 
+#register-page {
+    min-height: 800px !important;
+    #register-content-c {
+        height: 100%;
+        width: 100%;
+        padding-top: 26px;
+        padding-bottom: 26px;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 26px;
+    }
+}
+
 #register-form-container {
     h3 {
         width: 100%;
@@ -161,39 +213,6 @@
     }
     .ant-btn {
         width: 100%;
-    }
-}
-
-#webcam-container {
-    padding: 16px;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 26px;
-    video {
-        border: 2px solid #000;
-        border-radius: 16px;
-        -webkit-border-radius: 16px;
-        -moz-border-radius: 16px;
-        -ms-border-radius: 16px;
-        -o-border-radius: 16px;
-    }
-}
-.webcam-buttons {
-    width: 550px;
-    height: fit-content;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 26px;
-    button {
-        font-size: 15px !important;
-        width: 150px !important;
     }
 }
 
