--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -102,6 +102,60 @@ body.dark {
   margin: 0%;
 }
 
+.not-t {
+  color: red;
+  width: 100%;
+}
+
+.not-cont {
+  width: 100px;
+  display: inline;
+}
+.not-cont .not-p {
+  width: 200px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.ant-dropdown-menu {
+  max-height: 500px !important;
+  height: fit-content;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: thin;
+}
+.ant-dropdown-menu::-webkit-scrollbar {
+  width: 6px;
+}
+.ant-dropdown-menu::-webkit-scrollbar-thumb {
+  background-color: #b7b7b7;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+}
+.ant-dropdown-menu::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+#issues-closed-pic {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+#issues-closed-pic svg {
+  color: black;
+  width: 30px !important;
+  height: 30px !important;
+}
+
 .logo-light,
 .notifs-light {
   filter: brightness(0) invert(1);
