--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -84,6 +84,62 @@
     }
 }
 
+.not-t {
+    color: red;
+    width: 100%;
+}
+
+.not-cont {
+    width: 100px;
+    display: inline;
+    .not-p {
+        width: 200px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+}
+
+.ant-dropdown-menu {
+    max-height: 500px !important;
+    height: fit-content;
+    overflow-y: scroll;
+    &::-webkit-scrollbar {
+        width: 6px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: #b7b7b7;
+        border-radius: 6px;
+        -webkit-border-radius: 6px;
+        -moz-border-radius: 6px;
+        -ms-border-radius: 6px;
+        -o-border-radius: 6px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: #f1f1f1;
+    }
+    -ms-overflow-style: none;
+    scrollbar-width: thin;
+}
+
+#issues-closed-pic {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    svg {
+        color: black;
+        width: 30px !important;
+        height: 30px !important;
+    }
+}
+
 .logo-light,
 .notifs-light {
     filter: brightness(0) invert(1);
