--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -5,7 +5,8 @@
 #attendance-page,
 #register-page,
 #login-page,
-#notfound-page {
+#notfound-page,
+#departments-page {
     height: fit-content;
     min-height: 100%;
     width: 100%;
@@ -266,5 +267,98 @@
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
+    }
+}
+
+// ---------------------------------------
+// Departments
+// ---------------------------------------
+
+#departments-content {
+    width: 100%;
+    height: 75vh;
+    max-height: 75vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin: auto;
+    .ant-table-wrapper {
+        width: 95% !important;
+        .ant-table {
+            border-left: 1px solid var(--table-border-color);
+            border-right: 1px solid var(--table-border-color);
+            th {
+                white-space: nowrap;
+            }
+
+            td {
+                min-width: 300px;
+                max-width: 300px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+
+            .col-id {
+                min-width: 80px;
+                max-width: 80px;
+            }
+            .col-name,
+            .col-site {
+                min-width: 350px;
+                max-width: 350px;
+            }
+            .col-status {
+                min-width: 150px;
+                max-width: 150px;
+            }
+            .col-action {
+                min-width: 184px;
+                max-width: 184px;
+            }
+
+            .tbuttons {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+            }
+
+            .ant-switch {
+                display: inline-block;
+            }
+        }
+    }
+    button {
+        align-self: flex-end;
+    }
+}
+
+.skeletons {
+    width: 100% !important;
+}
+
+#add-new-dep {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    #new-dep-inputs {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 10px;
+    }
+    .new-dep-buttons {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
     }
 }
